@@ -23,6 +23,7 @@ MPlayer (1.0)
     * handle resolution switching for Real codecs
     * ffmpeg video decoder handles aspect ratio changes
     * amr now handled via libamr wrapper (http://www.penguin.cz/~utx/amr)
+    * SIMD optimizations for mp3lib under AMD64
 
     Demuxers:
     * implemented switch_video and switch_program consistently with switch_audio
